Top Banner added

--- a/index.html
+++ b/index.html
@@ -6,11 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Products</title>
+    <!-- stylesheets -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+    <!-- header start -->
+    <header>
+        <!-- navigation menus -->
+        <nav class="container">
+            <div class="top-heading-ls">
+                <h1 class="top-heading-ls">Influencer Products</h1>
+            </div>
+            <ul class="navigation">
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Login</a></li>
+                <li><a href=""><i class="fas fa-search"></i></a></li>
+                <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
+            </ul>
+        </nav>
+        <!-- popular collection -->
+        <section class="top-banner container">
+            <div class="top-banner-ls">
+                <h2>Start your Journey as
+                    Influencer</h2>
+                <p>
+                    Being an influencer is not an easy job. We have to keep ourselves up to the date with the ongoing
+                    trends. And doing so we definitely need the right gadgets & gears. Here you can find those!
+                </p>
+                <button class="primary-btn">
+                    Prebook now <i class="fas fa-arrow-right"></i>
+                </button>
+            </div>
+            <div class="top-banner-rs">
+                <div class="top-banner-rs-imgs">
+                    <img class="cam-bg-design" src="./images/Circle design.svg" alt="Background Design for Camera">
+                    <img class="main-camera" src="./images/main-camera.png" alt="Fujifilm Camera">
+                </div>
+            </div>
+
+        </section>
+
+    </header>
+    <!-- header end -->
+    <main>
+
+
+
+    </main>
 
 </body>
+
+
+<script src="https://kit.fontawesome.com/09d192498a.js" crossorigin="anonymous"></script>
 
 </html>
