brand logos added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,19 @@
     </header>
     <!-- header end -->
     <main>
-
+        <section class="brand-logos container">
+            <hr class="hori-line">
+            <div class="brand-logos-container">
+                <img class="alibaba-logo" src="./logos/Alibaba.svg" alt="Logo of Alibaba">
+                <img class="amazon-logo" src="./logos/Amazon.svg" alt="Logo of Amazon">
+                <img class="daraz-logo" src="./logos/Daraz.pk Logo.svg" alt="Logo of Daraz">
+                <img class="ebay-logo" src="./logos/Ebay.svg" alt="Logo of Ebay">
+                <img class="rakuten-logo" src="./logos/Rakuten.svg" alt="Logo of Rakuten">
+                <img class="walmart-logo" src="./logos/Walmart.svg" alt="Logo of Walmart">
+                <img class="target-logo" src="./logos/Target.svg" alt="Logo of Target">
+            </div>
+            <hr class="hori-line">
+        </section>
 
 
     </main>
