grid items added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
-        <!-- popular collection -->
+        <!-- top banner -->
         <section class="top-banner container">
             <div class="top-banner-ls">
                 <h2>Start your Journey as
@@ -52,6 +52,7 @@
     </header>
     <!-- header end -->
     <main>
+        <!-- brand logos -->
         <section class="brand-logos container">
             <hr class="hori-line">
             <div class="brand-logos-container">
@@ -65,6 +66,187 @@
             </div>
             <hr class="hori-line">
         </section>
+        <!-- popular collection -->
+
+        <div class="popular-collection-heading container">
+            <h2>Popular Collection</h2>
+        </div>
+
+        <div class="popular-collection container">
+
+            <!-- flex tripod -->
+            <div class="items-1">
+                <img src="./images/tripod.png" alt="Flex Tripod">
+                <h3>Flex Tripod</h3>
+                <p> <span class="item-price">$50.48</span> <br>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    4.99
+                </p>
+                <div class="shipping-details">
+                    <p> Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+
+            </div>
+            <!-- microphone -->
+            <div class="items-2">
+                <img src="./images/mic.png" alt="Microphone">
+                <h3>Microphone</h3>
+                <p> <span class="item-price">$120.25</span> <br>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    4.99
+                </p>
+                <div class="shipping-details">
+                    <p> Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+            </div>
+            <!-- airbuds -->
+            <div class="items-3">
+                <img src="./images/airpod.png" alt="Airbuds">
+                <h3>Airbuds</h3>
+                <p> <span class="item-price">$100.00</span> <br>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    4.99
+                </p>
+                <div class="shipping-details">
+                    <p> Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+            </div>
+            <!-- drone -->
+            <div class="items-4">
+                <img src="./images/drone.png" alt="Drone">
+                <h3>Drone</h3>
+                <p> <span class="item-price">$980.25</span> <br>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    4.99
+                </p>
+                <div class="shipping-details">
+                    <p> Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+            </div>
+            <!-- light setup -->
+            <div class="items-5">
+                <img src="./images/lights.png" alt="Light Setup">
+                <h3>Light Setup</h3>
+                <p> <span class="item-price">$1200.00</span> <br>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    4.99
+                </p>
+                <div class="shipping-details">
+                    <p> Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+            </div>
+            <!-- photoshoot set -->
+            <div class="items-6">
+                <img src="./images/setup.png" alt="Photoshoot Set">
+                <h3>Photoshoot Set</h3>
+                <p> <span class="item-price">$820.40</span> <br>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    4.99
+                </p>
+                <div class="shipping-details">
+                    <p> Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+            </div>
+            <!-- vlogging camera -->
+            <div class="items-7">
+                <img src="./images/camera.png" alt="Vlogging Camera">
+                <h3>Vlogging Camera</h3>
+                <p> <span class="item-price">$1800.80</span> <br>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    4.99
+                </p>
+                <div class="shipping-details">
+                    <p> Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+            </div>
+            <!-- green screen -->
+            <div class="items-8">
+                <img src="./images/single-light.png" alt="Green Screen">
+                <h3>Green Screen</h3>
+                <p> <span class="item-price">$25.48</span> <br>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    4.99
+                </p>
+                <div class="shipping-details">
+                    <p> Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+            </div>
+            <!-- action camera -->
+            <div class="items-9">
+                <img src="./images/action.png" alt="Action Camera">
+                <h3>Action Camera</h3>
+                <p> <span class="item-price">$380.00</span> <br>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    4.99
+                </p>
+                <div class="shipping-details">
+                    <p> Wordwide shipping available <br>
+                        Buyers protection possible!
+                    </p>
+                </div>
+            </div>
+        </div>
 
 
     </main>
