html css final commit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- top banner -->
         <section class="top-banner container">
             <div class="top-banner-ls">
-                <h2>Start your Journey as
+                <h2 class="styling-text">Start your Journey as
                     Influencer</h2>
                 <p>
                     Being an influencer is not an easy job. We have to keep ourselves up to the date with the ongoing
@@ -247,9 +247,41 @@
                 </div>
             </div>
         </div>
-
-
+        <div class="see-more-btn container">
+            <a href="">See More <i class="fas fa-arrow-right"></i> </a>
+        </div>
+        <!-- contact -->
+        <div class="contact-title">
+            <h2>Contact Us</h2>
+        </div>
+        <br>
+        <section class="contact-form container">
+            <div class="contact-ls">
+                <img src="./images/Contact.jpg" alt="">
+            </div>
+            <div class="contact-rs">
+                <form action="">
+                    <input type="text" placeholder="Your Name" class="text-field">
+                    <input type="text" placeholder="Your Email" class="text-field">
+                    <textarea placeholder="Your Message" class="text-field" cols="30" rows="10"></textarea>
+                    <button class="primary-btn">Submit</button>
+                </form>
+            </div>
+        </section>
     </main>
+    <!-- footer -->
+    <footer>
+        <h2>Influencer Products</h2>
+        <p>Copyright &copy 2022 Influencer Products <br>
+            All Rights Reserved
+        </p>
+        <div class="social-medias">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-dribbble"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
+    </footer>
 
 </body>
 
