--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <div class="top-heading-ls">
                 <h1 class="top-heading-ls">Influencer Products</h1>
             </div>
+            <input type="checkbox" id="nav-toggler">
+            <label class="nav-toggler-icon" for="nav-toggler"><i class="card-icon fas fa-bars"></i></label>
             <ul class="navigation">
                 <li><a href="">Home</a></li>
                 <li><a href="">Products</a></li>
@@ -26,6 +28,7 @@
                 <li><a href=""><i class="fas fa-search"></i></a></li>
                 <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
+
         </nav>
         <!-- top banner -->
         <section class="top-banner container">
